--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
 <h1><%= @article.title %></h1>
 
 <p><%= @article.body %> </p>
+
+<%= link_to "Edit", edit_article_path(@article) %>
+<br>
+<a href="/articles">Back</a>
